--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
       "@component/*":["src/app/component/*", "src/app/core/component/*"],
       "@service/*":["src/app/service/*", "src/app/core/service/*"],
       "@function/*":["src/app/function/*", "src/app/core/function/*"],
-      "@pipe/*":["src/app/pipe/*", "src/app/core/pipe/*"]
+      "@pipe/*":["src/app/pipe/*", "src/app/core/pipe/*"],
+      "@directive/*":["src/app/directive/*", "src/app/core/directive/*"],
+      "@config/*":["src/app/config/*", "src/app/core/config/*"]
+
     },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
@@ -18,9 +21,6 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
     "lib": [
       "es2018",
       "dom"
